[HW-15]_add_full_SqlStorage